[package]
name = "chik-wallet-sdk"
version = "0.20.0"
edition = "2021"
license = "Apache-2.0"
description = "An unofficial SDK for building Chik wallets."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chik-Network/chik-wallet-sdk"
repository = "https://github.com/Chik-Network/chik-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[workspace]
resolver = "2"
members = ["crates/*", "napi"]

[workspace.package]
readme = "README.md"
keywords = ["chik", "wallet", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_extern_crates = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "warn"
unreachable_code = "warn"
unreachable_patterns = "deny"
dead_code = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"

[workspace.lints.rustdoc]
all = { level = "deny", priority = -1 }
missing_crate_level_docs = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"

[lints]
workspace = true

[features]
chip-0035 = ["chik-sdk-driver/chip-0035", "chik-sdk-types/chip-0035"]
experimental-vaults = [
    "chik-sdk-driver/experimental-vaults",
    "chik-sdk-types/experimental-vaults",
]
offers = ["chik-sdk-driver/offers"]
native-tls = ["chik-sdk-client/native-tls"]
rustls = ["chik-sdk-client/rustls"]

[dependencies]
chik-sdk-client = { workspace = true }
chik-sdk-driver = { workspace = true }
chik-sdk-signer = { workspace = true }
chik-sdk-test = { workspace = true }
chik-sdk-types = { workspace = true }
chik-sdk-utils = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }
chik-protocol = { workspace = true }
chik-puzzles = { workspace = true }
chik-bls = { workspace = true }
klvm-utils = { workspace = true }
klvm-traits = { workspace = true, features = ["derive"] }
klvmr = { workspace = true }

[workspace.dependencies]
chik-wallet-sdk = { version = "0.20.0", path = "." }
chik-sdk-client = { version = "0.20.0", path = "./crates/chik-sdk-client" }
chik-sdk-derive = { version = "0.20.0", path = "./crates/chik-sdk-derive" }
chik-sdk-driver = { version = "0.20.0", path = "./crates/chik-sdk-driver" }
chik-sdk-signer = { version = "0.20.0", path = "./crates/chik-sdk-signer" }
chik-sdk-test = { version = "0.20.0", path = "./crates/chik-sdk-test" }
chik-sdk-types = { version = "0.20.0", path = "./crates/chik-sdk-types" }
chik-sdk-utils = { version = "0.20.0", path = "./crates/chik-sdk-utils" }
chik = "0.17.0"
chik-ssl = "0.17.0"
chik-protocol = "0.17.0"
chik-consensus = "0.17.0"
chik-traits = "0.17.0"
chik-bls = "0.17.0"
chik-secp = "0.17.0"
chik-puzzles = "0.17.0"
klvm-traits = "0.17.0"
klvm-utils = "0.17.0"
klvmr = "0.10.0"
thiserror = "1.0.61"
hex = "0.4.3"
bech32 = "0.9.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
indexmap = "2.2.6"
bip39 = "2.0.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"
anyhow = "1.0.86"
tokio = "1.37.0"
itertools = "0.13.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
native-tls = "0.2.11"
rustls = "0.22.0"
rustls-pemfile = "2.1.3"
flate2 = "1.0.30"
once_cell = "1.19.0"
num-bigint = "0.4.6"
rstest = "0.22.0"
tracing = "0.1.40"
syn = "2.0.76"
quote = "1.0.37"
convert_case = "0.6.0"
fastrand = "2.1.1"
napi-derive = "2.12.2"
napi = { version = "2.12.2", default-features = false }
paste = "1.0.15"
bigdecimal = "0.4.6"
k256 = "0.13.4"
p256 = "0.13.2"

[profile.release]
lto = true
strip = "symbols"
