[package]
name = "chik-sdk-test"
version = "0.20.0"
edition = "2021"
license = "Apache-2.0"
description = "A wallet simulator and related tooling for testing Chik wallet code."
authors = ["Brandon Haggstrom <me@rigidnetwork.com>"]
homepage = "https://github.com/Chik-Network/chik-wallet-sdk"
repository = "https://github.com/Chik-Network/chik-wallet-sdk"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lints]
workspace = true

[dependencies]
chik-bls = { workspace = true }
chik-consensus = { workspace = true }
chik-protocol = { workspace = true }
chik-traits = { workspace = true }
chik-puzzles = { workspace = true }
klvm-utils = { workspace = true }
klvm-traits = { workspace = true }
klvmr = { workspace = true }
futures-channel = { workspace = true, features = ["sink"] }
futures-util = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
fastrand = { workspace = true }
bip39 = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
chik-sdk-types = { workspace = true }
chik-sdk-signer = { workspace = true }
chik-sdk-client = { workspace = true }
hex = { workspace = true }
